fix(navigation): fix colour of text on navigation menu being inherited
- the navigation menu has an opaque and predictable background colour.
- set the colour of navigation menu text manually to prevent an
  inherited colour from making the text unreadable.

--- a/src/_components/header/header.module.css
+++ b/src/_components/header/header.module.css
@@ -71,6 +71,7 @@
         flex-direction: column;
         justify-content: space-between;
         background-color: var(--background);
+        color: var(--foreground);
         padding: var(--body-padding);
     }
 
